# pyamtcpp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  pyproject.toml  requirements.txt  setup.py  unpinned_requirements.txt
.github/workflows/: pip.yml  wheels.yml
docs/: Makefile  conf.py  index.rst  make.bat  pyamtcpp.rst
src/: main copy.cpp  main.cpp
tests/: scratch.py  test.py  test_compute_energy.py
utils/: benchmarking.py
